[gd_scene load_steps=18 format=3 uid="uid://demv71ew02bcc"]

[ext_resource type="Texture2D" uid="uid://cp6quv6ytsxfv" path="res://Assets/ui/back panel.png" id="1_1b6wj"]
[ext_resource type="Texture2D" uid="uid://brfu6n2jddd6r" path="res://Assets/ui/exit button.png" id="1_eqwyn"]
[ext_resource type="Script" path="res://Assets/ui/options.gd" id="1_h0fla"]
[ext_resource type="Texture2D" uid="uid://isva4ylm0gc3" path="res://Assets/ui/logo options.png" id="2_rmj5q"]
[ext_resource type="Texture2D" uid="uid://dsx1ski4rkdwe" path="res://Assets/ui/sound button on.png" id="3_1nb8c"]
[ext_resource type="Texture2D" uid="uid://my5rp8jx0gfw" path="res://Assets/ui/grabber.png" id="4_acsqx"]
[ext_resource type="Texture2D" uid="uid://ijpnc35t14q0" path="res://Assets/ui/sound slider linia.png" id="5_385mn"]
[ext_resource type="Texture2D" uid="uid://c05kvk7rdn7jf" path="res://Assets/ui/sound slider linia3.png" id="6_h3nq7"]
[ext_resource type="Texture2D" uid="uid://dppdwnal2smaf" path="res://Assets/ui/button.png" id="7_mieo7"]
[ext_resource type="Texture2D" uid="uid://wff25v1xoco" path="res://Assets/ui/strela1.png" id="8_h08gs"]
[ext_resource type="Texture2D" uid="uid://c2of8xbhgqvga" path="res://Assets/ui/1920 1080.png" id="11_ia7h1"]
[ext_resource type="Texture2D" uid="uid://dnboeo6ctdstq" path="res://Assets/ui/1280 720.png" id="12_g7ntt"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_apjhp"]
texture = ExtResource("5_385mn")
texture_margin_left = 3.0
texture_margin_top = 3.0
texture_margin_right = 4.0
texture_margin_bottom = 5.0
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 1.0
expand_margin_bottom = 4.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_s2f7s"]
texture = ExtResource("6_h3nq7")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_8uedq"]
texture = ExtResource("7_mieo7")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_y2576"]
texture = ExtResource("7_mieo7")

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_tjgjj"]
texture = ExtResource("7_mieo7")

[node name="options" type="Node2D"]
script = ExtResource("1_h0fla")

[node name="close" type="TextureButton" parent="."]
offset_left = 32.0
offset_top = 19.0
offset_right = 81.0
offset_bottom = 36.0
texture_normal = ExtResource("1_eqwyn")

[node name="BackPanel" type="Sprite2D" parent="."]
texture = ExtResource("1_1b6wj")

[node name="LogoOptions" type="Sprite2D" parent="."]
position = Vector2(0, -26)
texture = ExtResource("2_rmj5q")

[node name="SoundButton" type="TextureButton" parent="."]
offset_left = -36.0
offset_top = -11.0
offset_right = -22.0
offset_bottom = 5.0
texture_normal = ExtResource("3_1nb8c")

[node name="HSlider" type="HSlider" parent="."]
offset_left = -18.0
offset_top = -10.0
offset_right = 35.0
offset_bottom = 3.0
theme_override_icons/grabber = ExtResource("4_acsqx")
theme_override_icons/grabber_highlight = ExtResource("4_acsqx")
theme_override_icons/grabber_disabled = ExtResource("4_acsqx")
theme_override_styles/slider = SubResource("StyleBoxTexture_apjhp")
theme_override_styles/grabber_area = SubResource("StyleBoxTexture_s2f7s")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxTexture_s2f7s")
min_value = -20.0
max_value = 10.0
step = 0.05
value = 5.0

[node name="OptionButton" type="OptionButton" parent="."]
offset_left = -36.0
offset_top = 5.0
offset_right = 36.0
offset_bottom = 21.0
theme_override_styles/hover = SubResource("StyleBoxTexture_8uedq")
theme_override_styles/pressed = SubResource("StyleBoxTexture_y2576")
theme_override_styles/normal = SubResource("StyleBoxTexture_tjgjj")
theme_override_icons/arrow = ExtResource("8_h08gs")
alignment = 1
icon_alignment = 1
item_count = 2
popup/item_0/icon = ExtResource("11_ia7h1")
popup/item_1/icon = ExtResource("12_g7ntt")
popup/item_1/id = 1

[connection signal="pressed" from="close" to="." method="_on_close_pressed"]
[connection signal="pressed" from="SoundButton" to="." method="_on_sound_button_pressed"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
